--fix: the spacing between different input boxes

--- a/src/components/input-box/input-box.scss
+++ b/src/components/input-box/input-box.scss
@@ -13,4 +13,7 @@ input-box {
   .text-input-md {
     margin: 0px
   }
+  .input-container {
+    margin: 15px 0px;
+  }
 }
